<resources>
    <string name="app_name">FoodMandu</string>
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->

    <string name="menu_home">FOODMANDU
    </string>
    <string name="title_favourites">My Favourites</string>
    <string name="title_basket"> My Basket</string>
    <string name="title_history">Order History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
</resources>
