<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sheela.foodmandu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sheela.foodmandu.ui.MyFavourites.GalleryFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sheela.foodmandu.ui.Basket.SlideshowFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.sheela.foodmandu.ui.OrderHistory.ToolsFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.sheela.foodmandu.ui.Notifications.ShareFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.sheela.foodmandu.ui.More.SendFragmentActivity"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_send" />
</navigation>